--- a/config/database.yml
+++ b/config/database.yml
@@ -2,6 +2,9 @@ development: &default
   adapter: postgresql
   database: copycopter_development
   min_messages: WARNING
+  host: <%= ENV['POSTGRES_PORT_5432_TCP_ADDR'] %>
+  user: <%= ENV['POSTGRES_ENV_POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_ENV_POSTGRES_PASSWORD'] %>
 
 test: &test
   <<: *default
